--- a/web/package.json
+++ b/web/package.json
@@ -18,9 +18,12 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@eslint/eslintrc": "^3.3.1",
+    "@maskito/core": "^3.9.0",
+    "@maskito/react": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
@@ -32,7 +35,9 @@
     "@tanstack/react-virtual": "^3.13.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "convex": "^1.23.0",
+    "date-fns": "^4.1.0",
     "emblor": "^1.4.8",
     "eslint-plugin-import": "^2.31.0",
     "framer-motion": "^12.16.0",
@@ -41,6 +46,7 @@
     "lucide-react": "^0.471.0",
     "next": "15.2.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
     "usehooks-ts": "^3.1.1",
