--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,8 @@ services:
         NEXT_PUBLIC_CONVEX_SITE_URL: ${PUBLIC_CONVEX_SITE_URL:-http://localhost:3211}
         NEXT_PUBLIC_SITE_URL: ${PUBLIC_FRONTEND_URL:-http://localhost:3999}
         VSPHERE_HOSTNAME: ${VSPHERE_HOSTNAME}
+        NEXT_PUBLIC_VERSION: ${NEXT_PUBLIC_VERSION}
+        NEXT_PUBLIC_VERSION_MOD: ${NEXT_PUBLIC_VERSION_MOD:-}
     stop_grace_period: 10s
     stop_signal: SIGINT
     depends_on:
@@ -53,6 +55,8 @@ services:
       NEXT_PUBLIC_CONVEX_SITE_URL: ${PUBLIC_CONVEX_SITE_URL:-http://localhost:3211}
       NEXT_PUBLIC_SITE_URL: ${PUBLIC_FRONTEND_URL:-http://localhost:3999}
       INVITE_CODE: ${INVITE_CODE}
+      NEXT_PUBLIC_VERSION: ${NEXT_PUBLIC_VERSION}
+      NEXT_PUBLIC_VERSION_MOD: ${NEXT_PUBLIC_VERSION_MOD:-}
     network_mode: host
 
   postgres:
