--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "lint": "next lint",
     "license:add": "license-check-and-add add -f license-check-and-add-config.json",
     "license:check": "license-check-and-add check -f license-check-and-add-config.json",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "vitest",
+    "test:once": "vitest run",
+    "test:debug": "vitest --inspect-brk --no-file-parallelism",
+    "test:coverage": "vitest run --coverage --coverage.reporter=text"
   },
   "dependencies": {
     "@codemirror/commands": "^6.1.3",
@@ -68,11 +72,14 @@
     "zod": "^3.25.56"
   },
   "devDependencies": {
+    "@edge-runtime/vm": "^5.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/mousetrap": "^1.6.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/coverage-v8": "3.2.4",
+    "convex-test": "^0.0.37",
     "dotenv": "^16.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
@@ -80,10 +87,14 @@
     "eslint-import-resolver-typescript": "^4.4.3",
     "license-check-and-add": "^4.0.5",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.12",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.12"
-  }
+    "vitest": "^3.2.4",
+    "@types/bun": "latest"
+  },
+  "module": "index.ts",
+  "type": "module"
 }
