--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-visually-hidden": "^1.2.3",
+    "@react-querybuilder/dnd": "^8.7.1",
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.10",
@@ -61,12 +63,15 @@
     "framer-motion": "^12.16.0",
     "fuse.js": "^7.1.0",
     "hibp": "^15.0.1",
+    "json-logic-js": "^2.0.5",
     "lucide-react": "^0.471.2",
     "mousetrap": "^1.6.5",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
+    "react-querybuilder": "^8.7.1",
+    "sass": "^1.89.2",
     "tailwind-merge": "^3.3.0",
     "usehooks-ts": "^3.1.1",
     "zod": "^3.25.56"
@@ -74,6 +79,8 @@
   "devDependencies": {
     "@edge-runtime/vm": "^5.0.0",
     "@tailwindcss/postcss": "^4",
+    "@types/bun": "latest",
+    "@types/json-logic-js": "^2.0.8",
     "@types/mousetrap": "^1.6.15",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -92,8 +99,7 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5",
-    "vitest": "^3.2.4",
-    "@types/bun": "latest"
+    "vitest": "^3.2.4"
   },
   "module": "index.ts",
   "type": "module"
