--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hypershelf",
-  "version": "0.3.0",
+  "version": "0.6.0",
   "private": true,
   "scripts": {
     "dev": "npm-run-all --parallel dev:frontend dev:backend",
@@ -12,95 +12,92 @@
     "lint": "next lint",
     "license:add": "license-check-and-add add -f license-check-and-add-config.json",
     "license:check": "license-check-and-add check -f license-check-and-add-config.json",
-    "format": "prettier --write .",
-    "test": "vitest",
-    "test:once": "vitest run",
-    "test:debug": "vitest --inspect-brk --no-file-parallelism",
-    "test:coverage": "vitest run --coverage --coverage.reporter=text"
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "@codemirror/commands": "^6.1.3",
-    "@codemirror/lang-markdown": "^6.0.5",
-    "@codemirror/language": "^6.3.2",
-    "@codemirror/language-data": "^6.1.0",
-    "@codemirror/state": "^6.2.0",
-    "@codemirror/view": "^6.7.1",
+    "@codemirror/commands": "6.8.1",
+    "@codemirror/lang-markdown": "6.3.4",
+    "@codemirror/language": "6.11.2",
+    "@codemirror/language-data": "6.5.1",
+    "@codemirror/state": "6.5.2",
+    "@codemirror/view": "6.38.1",
     "@convex-dev/auth": "^0.0.81",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@eslint/eslintrc": "^3.3.1",
-    "@icons-pack/react-simple-icons": "^13.1.0",
-    "@lezer/highlight": "^1.1.3",
+    "@icons-pack/react-simple-icons": "^13.7.0",
+    "@lezer/highlight": "^1.2.1",
     "@lezer/markdown": "^1.4.3",
-    "@markdoc/markdoc": "^0.2.1",
-    "@maskito/core": "^3.9.0",
-    "@maskito/react": "^3.9.0",
-    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@markdoc/markdoc": "^0.2.2",
+    "@maskito/core": "^3.10.3",
+    "@maskito/react": "^3.10.3",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-visually-hidden": "^1.2.3",
-    "@react-querybuilder/dnd": "^8.7.1",
-    "@tabler/icons-react": "^3.34.0",
+    "@react-querybuilder/dnd": "^8.8.3",
+    "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-table": "^8.21.3",
-    "@tanstack/react-virtual": "^3.13.10",
+    "@tanstack/react-virtual": "^3.13.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "convex": "^1.23.0",
+    "convex": "^1.25.4",
     "date-fns": "^4.1.0",
     "emblor": "^1.4.8",
-    "eslint-plugin-import": "^2.31.0",
-    "framer-motion": "^12.16.0",
+    "eslint-plugin-import": "^2.32.0",
+    "framer-motion": "^12.23.12",
     "fuse.js": "^7.1.0",
     "hibp": "^15.0.1",
     "json-logic-js": "^2.0.5",
-    "lucide-react": "^0.471.2",
+    "lucide-react": "^0.539.0",
     "mousetrap": "^1.6.5",
     "next": "15.2.3",
-    "react": "^19.0.0",
-    "react-day-picker": "^9.7.0",
-    "react-dom": "^19.0.0",
-    "react-querybuilder": "^8.7.1",
-    "sass": "^1.89.2",
-    "tailwind-merge": "^3.3.0",
+    "react": "^19.1.1",
+    "react-day-picker": "^9.8.1",
+    "react-dom": "^19.1.1",
+    "react-querybuilder": "^8.8.3",
+    "sass": "^1.90.0",
+    "tailwind-merge": "^3.3.1",
     "usehooks-ts": "^3.1.1",
-    "zod": "^3.25.56"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@edge-runtime/vm": "^5.0.0",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/bun": "latest",
     "@types/json-logic-js": "^2.0.8",
     "@types/mousetrap": "^1.6.15",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@vitest/coverage-v8": "3.2.4",
-    "convex-test": "^0.0.37",
-    "dotenv": "^16.4.7",
-    "eslint": "^9",
+    "@types/node": "^20.19.10",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "dotenv": "^16.6.1",
+    "eslint": "^9.33.0",
     "eslint-config-next": "15.2.3",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-import-resolver-typescript": "^4.4.3",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "license-check-and-add": "^4.0.5",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.12",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.4",
-    "typescript": "^5",
-    "vitest": "^3.2.4"
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.6",
+    "typescript": "^5.9.2"
   },
   "module": "index.ts",
-  "type": "module"
+  "type": "module",
+  "resolutions": {
+    "@codemirror/language": "6.11.2",
+    "@codemirror/view": "6.38.1"
+  }
 }
