--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hypershelf",
-  "version": "0.7.4",
+  "version": "0.7.5",
   "private": true,
   "scripts": {
     "dev": "npm-run-all --parallel dev:frontend dev:backend",
@@ -63,7 +63,7 @@
     "json-logic-js": "^2.0.5",
     "lucide-react": "^0.539.0",
     "mousetrap": "^1.6.5",
-    "next": "15.2.3",
+    "next": "^15.4.7",
     "react": "^19.1.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
