--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-visually-hidden": "^1.2.3",
-    "@react-querybuilder/dnd": "^8.8.3",
+    "@react-querybuilder/dnd": "^8.9.2",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.89.0",
@@ -53,6 +53,7 @@
     "@trpc/client": "^11.5.1",
     "@trpc/react-query": "^11.5.1",
     "@trpc/server": "^11.5.1",
+    "@types/lodash": "^4.17.20",
     "@typescript-eslint/typescript-estree": "^8.44.0",
     "@xmldom/xmldom": "^0.8.11",
     "@xyflow/react": "^12.8.5",
@@ -68,11 +69,14 @@
     "hibp": "^15.0.1",
     "immer": "^10.1.3",
     "json-logic-js": "^2.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "mousetrap": "^1.6.5",
     "next": "^15.4.7",
     "react": "^19.1.1",
     "react-day-picker": "^9.8.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.1",
     "react-querybuilder": "^8.8.3",
     "redis": "^5.8.2",
