--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hypershelf",
-  "version": "0.7.13",
+  "version": "0.7.14",
   "private": true,
   "scripts": {
     "dev": "npm-run-all --parallel dev:frontend dev:backend",
@@ -93,6 +93,7 @@
     "@edge-runtime/vm": "^5.0.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/bun": "latest",
+    "@types/chrome": "^0.1.22",
     "@types/json-logic-js": "^2.0.8",
     "@types/mousetrap": "^1.6.15",
     "@types/node": "^20.19.10",
