--- a/apps/extension/manifest.json
+++ b/apps/extension/manifest.json
@@ -1,18 +1,18 @@
 {
   "manifest_version": 3,
   "name": "Hypershelf",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Hopefully will make your experience using vSphere and Portal slightly less miserable",
   "background": {
     "service_worker": "background/index.js",
     "type": "module"
   },
-  "permissions": ["identity", "storage", "scripting", "tabs", "webNavigation"],
+  "permissions": ["identity", "storage"],
   "host_permissions": ["<all_urls>"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content/vsphere.js"],
+      "js": ["content/index.js"],
       "run_at": "document_idle"
     }
   ],
@@ -20,7 +20,7 @@
     "extension_pages": "script-src 'self'; object-src 'self'"
   },
   "oauth2": {
-    "client_id": "hypershelf-vsphere",
+    "client_id": "hypershelf-extension",
     "scopes": []
   }
 }
