--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -3,23 +3,29 @@
   "private": true,
   "version": "0.1.0",
   "scripts": {
-    "build": "pnpm with-env webpack --config ./webpack.config.js --mode production && cd dist && zip -r ../../web/public/hypershelf-vsphere.zip .",
-    "dev": "nodemon --watch src --watch webpack.config.js --ext ts,tsx --exec \"rm -rf dist && pnpm with-env webpack --config ./webpack.config.js --mode development\"",
+    "build": "pnpm with-env webpack --config ./webpack.config.js --mode production && cd dist && zip -r ../../web/public/plugins/hypershelf-vsphere.zip .",
+    "dev": "nodemon --watch src --watch webpack.config.js --ext ts,tsx,js,cjs,mjs --exec \"rm -rf dist ; pnpm with-env webpack --config ./webpack.config.js --mode development\"",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.4",
     "@hypershelf/eslint-config": "workspace:*",
     "@hypershelf/tailwind-config": "workspace:*",
+    "@types/babel__core": "^7.20.5",
     "@types/chrome": "^0.1.22",
     "@types/node": "^24.7.0",
+    "@types/postcss-import": "^14.0.3",
+    "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
     "fork-ts-checker-webpack-plugin": "^9.1.0",
     "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
     "postcss-loader": "^8.2.0",
+    "postcss-rem-to-responsive-pixel": "^6.1.0",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
     "style-loader": "^4.0.0",
