--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -77,6 +77,8 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "fuse.js": "^7.1.0",
+    "html2canvas-pro": "^1.5.12",
+    "html2pdf.js": "^0.12.1",
     "lucide-react": "catalog:",
     "mousetrap": "^1.6.5",
     "next-themes": "^0.4.6",
