--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,7 +33,8 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "catalog:react19",
-    "sass": "^1.93.2"
+    "sass": "^1.93.2",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@hypershelf/eslint-config": "workspace:*",
