--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,7 +34,8 @@
     "./primitives/tag-input": "./src/primitives/tag-input.tsx",
     "./primitives/textarea": "./src/primitives/textarea.tsx",
     "./primitives/tooltip": "./src/primitives/tooltip.tsx",
-    "./primitives/input-group": "./src/primitives/input-group.tsx"
+    "./primitives/input-group": "./src/primitives/input-group.tsx",
+    "./toast": "./src/Toast.tsx"
   },
   "types": "src/index.ts",
   "typesVersions": {
